# MPU_Gateway

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Inc/: BatteryManager.hpp  CloudManager.hpp  DataManager.hpp  DataProcessor.hpp  DeviceManager.hpp  FlightController.hpp  GatewayController.hpp  InterData.hpp  Logger.hpp  Main.hpp  MotorController.hpp  OtaManager.hpp  PayloadManager.hpp  ProtocolManager.hpp  RemoteController.hpp  SensorManager.hpp  TelemetryManager.hpp  ThreadManager.hpp
Inc/Hw/: HAL.hpp
Inc/Utils/: MessageQueue.hpp  RAIIHandle.hpp  RingBuffer.hpp  ThreadSafeQueue.hpp
Src/: BatteryManager.cpp  CloudManager.cpp  DataManager.cpp  DataProcessor.cpp  DeviceManager.cpp  FlightController.cpp  GatewayController.cpp  Logger.cpp  Main.cpp  MotorController.cpp  OtaManager.cpp  PayloadManager.cpp  ProtocolManager.cpp  RemoteController.cpp  SensorManager.cpp  TelemetryManager.cpp  ThreadManager.cpp
Src/Hw/: HAL.cpp
Tests/: test_ThreadSafeQueue.cpp
